All figures added from SPIE SD, included the not included in the paper

--- a/Objectives.tex
+++ b/Objectives.tex
@@ -1,4 +1,4 @@
-% !TEX root=ProposalJavier.tex 
+% !TEX root=Thesis_PhD.tex
 % the previous is to reference main .bib
 \chapter{Objectives}
 \label{ch:objectives}
