--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -635,17 +635,53 @@ Although the OLI's spectral bands are not narrow enough to be compared with MODI
 \todo{include my SNR figure}
 
 % ----------------------------------------------
-\section{Empirical Line Method}\todo{complete from papers}
+\section{Empirical Line Method}
 \label{subsec:ELM}
-The {\it empirical line method}\index{ELM} (ELM) is a method for calibration of image data to reflectance that uses ground truth.The ELM uses a linear regression in each band to relate digital counts or radiance to reflectance \cite{Schott}. The ground truth can be in general  either control panels or ad hoc control surfaces of known reflectance. These ground truth objects need to be approximately Lambertian to minimize any errors that could be introduced by sensor view angles effects. Also, these calibration targets are assumed flat and level, with no neighboring obscuration, and homogeneous as well. The ELM method generally assumes that the atmosphere is constant over the complete scene. If that is not the case, corrections must be made for changes in the atmosphere over the scene. The regression to be solved for each band in the ELM method is given by
+The {\it empirical line method}\index{ELM} (ELM) is a method for calibration of image data to reflectance that uses ground truth. The ELM uses a linear regression in each band to relate digital counts or radiance to reflectance \cite{Schott,Smith:1999}. The ground truth can be in general  either control panels or ad hoc control surfaces of known reflectance. These ground truth objects need to be approximately Lambertian to minimize any errors that could be introduced by sensor view angles effects. Also, these calibration targets are assumed flat and level, with no neighboring obscuration, and homogeneous as well. The ELM method generally assumes that the atmosphere is constant over the complete scene. If that is not the case, corrections must be made for changes in the atmosphere over the scene. The regression to be solved for each band in the ELM method is given by
 \begin{equation}
 	\label{eq:ELM} 
 	L = m\times r_d + b
 \end{equation}
 where $L$ is the radiance reaching the sensor value, $m$ is the slope of the regression, $r_d$ is the reflectance of the target, and $b=L_u$ is the intercept, with $L_u$ the upwelled radiance or path radiance. Then, the reflectance of the any Lambertian objects can be calculated by rearranging \autoref{eq:ELM}. In order to solve this regression, i.e. determine the value of $m$ and $b$, we need to have at least two targets with known radiance $L$ and reflectance $r_d$. After $m$ and $b$ have been determined, the reflectance of each pixel at each wavelength can be calculated from its radiance value from the image.
 
-An ELM target needs to have a size at least three times the ground instantaneous field of view of the sensor that will image it at the time of data collection. Taking this in consideration, the target should be at least 90x90 meters big for the Landsat sensor, which is sometimes difficult to build or even to find in the scene. 
-\todo{include figure from paper x-y axis}
+An ELM target needs to have a size at least three times the ground instantaneous field of view of the sensor that will image it at the time of data collection. Taking this in consideration, the target should be at least 90x90 meters big for the Landsat sensor, which is sometimes difficult to build or even to find in the scene.\todo{relate to ELM figure} 
+
+\begin{figure}[htb]
+  \centering
+% \resizebox{9cm}{!}{%
+\begin{tikzpicture}[x=4ex,y=1ex]
+  %axis
+  \draw (0,0) -- coordinate (x axis mid) (10,0);
+  \draw (0,0) -- coordinate (y axis mid) (0,30);
+ 
+    %labels      
+  \node[below=0ex] at (8,0) {\small $Band_i~~remote-sensing~reflectance~(R_{rs})$};
+  \node[rotate=90] at (-.5,23) {\small $Band_i~~Radiance~(L)$};
+
+  \node[below=.2ex] at (-2.1,4.5) {\scriptsize $b=$offset};
+  \node[below=1.4ex] at (-2.1,4.0) {\scriptsize (path radiance)};
+  \draw[rotate=90,|<->|] (0,1) -- coordinate (x axis mid) (1,1);
+
+  \node[below=0ex] at (2,15) {\small Dark Object};
+  \draw[arrows=-triangle 45] (2,12.5) -- (2,9);
+
+  \node[below=0ex] at (4,20) {\small $m=$ Slope};
+  \draw[arrows=-triangle 45] (4,17.5) -- (5,14.5);
+
+  \node[below=0ex] at (7,27) {\small Bright Object};
+  \draw[arrows=-triangle 45] (7,24.5) -- (7.9,20.5);
+
+  \node[below=0ex] at (8,9) {\small $R_{rs}=(L-b)/m$};
+
+  %plots
+  \draw plot 
+    file {linereg.data};
+  \draw plot[mark=*] 
+    file {linereg2.data};
+
+\end{tikzpicture}
+\caption{MoB-ELM atmospheric correction method. The MoB-ELM method is based on the traditional empirical line method (ELM). Two pixels from the image, the bright and dark pixel, are used to solve a liner regression with a slope $m$ and offset $b$ in the $R_{rs}$, $L$ space. Once this relationship is established, each $L$ value in the image can be converted to $R_{rs}$ through $R_{rs}=(L-b)/m$. \label{fig:ELMregression}}
+\end{figure}
 
 % \begin{tikzpicture}[scale=1.5]
 %     % Draw axes
